--- a/home/src/components/HowItWorks.css
+++ b/home/src/components/HowItWorks.css
@@ -1,5 +1,5 @@
 .how-it-works {
-  padding: 6rem 2rem;
+  padding: 3rem 2rem;
   background: var(--light-bg);
 }
 
