--- a/home/src/components/PressKit.css
+++ b/home/src/components/PressKit.css
@@ -83,8 +83,10 @@
 }
 
 .press-kit-contact-text {
-  font-size: 1rem;
+  padding-top: 3rem;
+  font-size: 1.2rem;
   color: var(--text-gray);
+  padding-bottom: 4rem;
 }
 
 .press-kit-contact-text a {
