--- a/home/src/components/WhoWeAre.css
+++ b/home/src/components/WhoWeAre.css
@@ -1,5 +1,5 @@
 .who-we-are {
-  padding: 6rem 2rem;
+  padding: 3rem 2rem;
   background: #ffffff;
 }
 
